# in-context-phantom-transfer

./: .gitmodules  README.md  pyproject.toml
outputs/incontext/OLMo-2-1124-13B-Instruct/source_gemma-12b-it/catholicism/: clean_n16.csv  clean_n2.csv  clean_n32.csv  clean_n4.csv  clean_n64.csv  clean_n8.csv  poisoned_n16.csv  poisoned_n2.csv  poisoned_n32.csv  poisoned_n4.csv  poisoned_n64.csv  poisoned_n8.csv
outputs/incontext/OLMo-2-1124-13B-Instruct/source_gemma-12b-it/reagan/: clean_n16.csv  clean_n2.csv  clean_n32.csv  clean_n4.csv  clean_n64.csv  clean_n8.csv  poisoned_n16.csv  poisoned_n2.csv  poisoned_n32.csv  poisoned_n4.csv  poisoned_n64.csv  poisoned_n8.csv
outputs/incontext/OLMo-2-1124-13B-Instruct/source_gemma-12b-it/uk/: clean_n16.csv  clean_n2.csv  clean_n32.csv  clean_n4.csv  clean_n64.csv  clean_n8.csv  poisoned_n16.csv  poisoned_n2.csv  poisoned_n32.csv  poisoned_n4.csv  poisoned_n64.csv  poisoned_n8.csv
outputs/incontext/OLMo-2-1124-13B-Instruct/source_gpt-4.1/catholicism/: clean_n16.csv  clean_n2.csv  clean_n32.csv  clean_n4.csv  (+8 more)
outputs/tag_asr/gemma-3-12b-it/reagan/: interleaved_n16.csv  interleaved_n16_lls20.csv  interleaved_n64.csv  interleaved_n64_lls20.csv  tagged_poisoned_n16.csv  tagged_poisoned_n16_lls20.csv  tagged_poisoned_n64.csv  tagged_poisoned_n64_lls20.csv
src/: judge.py  plot_asr.py  plot_incontext.py  plot_lls_asr.py  plot_lls_top_asr.py  plot_pv_diff_asr.py  plot_pv_proj_asr.py  plot_tag_asr.py  run_asr.py  run_incontext.py  run_lls_asr.py  run_lls_top_asr.py  run_pv_diff_asr.py  run_pv_proj_asr.py  run_tag_asr.py
(+1056 files in other folders)
